tested ancestry, stories connect to parent_id only, ajax call

--- a/user_story_app/app/views/welcome/index.html.erb
+++ b/user_story_app/app/views/welcome/index.html.erb
@@ -1,38 +1,4 @@
-<div class="row">
-  <!-- Each row should add up to 12 columns -->
-  <!-- Below we've declared how many columns will be rendered at diff screen sizes (break points) -->
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 tile">
-    <ul>
-      <li>As A:</li>
-      <li>I want to:</li>
-      <li>So I can:</li>
-    </ul>
-  </div>
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 tile">
-    <ul>
-      <li>As A:</li>
-      <li>I want to:</li>
-      <li>So I can:</li>
-    </ul>
-  </div>
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 tile">
-    <ul>
-      <li>As A:</li>
-      <li>I want to:</li>
-      <li>So I can:</li>
-    </ul>
-  </div>
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 tile">
-    <ul>
-      <li>As A:</li>
-      <li>I want to:</li>
-      <li>So I can:</li>
-    </ul>
-  </div>
+<div class="row" id="tiles-container">
+
 </div>
 
-<style>
-  .tile {
-    border: 1px solid black;
-  }
-</style>
