--- a/user_story_app/app/views/users/show.html.erb
+++ b/user_story_app/app/views/users/show.html.erb
@@ -15,6 +15,21 @@
   <%= @user.phone %>
 </p>
 
+<form id="user_story_form" action="">
+  <div>
+    <label>As a:</label>
+    <input id="as_a" type="text" name="as_a">
+  </div>
+  <div>
+    <label>I want to:</label>
+    <input id="i_want_to" type="text" name="i_want_to">
+  </div>
+  <div>
+    <label>So I can:</label>
+    <input id="so_i_can" type="text" name="so_i_can">
+  </div>
+  <div>
+    <input id="submit" type="submit">
+  </div>
+</form>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
