building out authentication, bundled Devise gem, preliminary setup in environments folder

--- a/user_story_app/app/views/layouts/application.html.erb
+++ b/user_story_app/app/views/layouts/application.html.erb
@@ -45,5 +45,10 @@
     </div>
   </div>
 
+  <!-- Devise Gem Authentication Alerts below -->
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
+
 </body>
 </html>
