--- a/user_story_app/app/views/users/show.html.erb
+++ b/user_story_app/app/views/users/show.html.erb
@@ -36,5 +36,6 @@
   </form>
 
 </div>
+<div id="breadcrumbs"><span>Dashboard</span> > <span id="add-story">Add</span></div>
 
 <div id="tiles-container" class="row"></div>
