--- a/user_story_app/app/assets/stylesheets/stories.css.scss
+++ b/user_story_app/app/assets/stylesheets/stories.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the stories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#breadcrumbs {
+  margin: 10px 0;
+}
+.tile {
+  border: 1px solid black;
+  padding: 10px 15px;
+  .complete-checkbox {
+    border: inherit;
+    max-width: 55px;
+    text-align: center;
+  }
+}
