--- a/user_story_app/app/views/layouts/application.html.erb
+++ b/user_story_app/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>UserStoryApp</title>
+  <title>Granulr</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -10,21 +10,23 @@
 
   <nav class="navbar navbar-default" role="navigation">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
+    <div class="navbar-header" style="width:500px;" >
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#"><h1 class="logo">Granulr</h1></a>
+      <img style="float: left;" height="100"src="http://cl.ly/image/2J0P191K361q/logo.png">
+      <h5 style="position:relative;top:37px">Step into your goals.</h5>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <% if user_signed_in? %>
       <ul class="nav navbar-nav navbar-right">
-        <li>Hello, <strong><%= current_user.email %></strong></li>
+        <li class="signed-in">Hello, <strong><%= current_user.email %></strong></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
           <ul class="dropdown-menu">
@@ -61,8 +63,19 @@
     </div>
   </div>
 
-
-
+<script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [ 'Nothing+You+Could+Do::latin' ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })(); </script>
 
 </body>
 </html>
