--- a/user_story_app/app/assets/stylesheets/scaffolds.css.scss
+++ b/user_story_app/app/assets/stylesheets/scaffolds.css.scss
@@ -1,13 +1,14 @@
 body {
-  background-color: #fff;
+  background: url('pinterest.png') repeat;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Nothing You Could Do', cursive;
   font-size: 13px;
   line-height: 18px;
+
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Nothing You Could Do', cursive;
   font-size: 13px;
   line-height: 18px;
 }
