--- a/user_story_app/app/assets/stylesheets/application.css.scss
+++ b/user_story_app/app/assets/stylesheets/application.css.scss
@@ -1,17 +1,4 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
- *= require_self
- *= require_tree .
- */
-// Core variables and mixins
+// Bootstrap Core
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 
@@ -60,3 +47,9 @@
 // Utility classes
 @import "bootstrap/utilities";
 @import "bootstrap/responsive-utilities";
+
+// App
+@import "scaffolds";
+@import "stories";
+@import "users";
+@import "welcome";
