--- a/user_story_app/app/views/layouts/application.html.erb
+++ b/user_story_app/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <nav class="navbar navbar-default" role="navigation">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header" style="width:500px;" >
+    <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -18,30 +18,27 @@
         <span class="icon-bar"></span>
       </button>
       <% if current_user %>
-        <a class="navbar-brand" href="<%= user_path %>"><h1 class="logo">Granulr</h1></a>
+        <a class="navbar-brand" href="<%= user_path %>">Granulr</a>
       <% else %>
-        <a class="navbar-brand" href="<%= root_path %>"><h1 class="logo">Granulr</h1></a>
+        <a class="navbar-brand" href="<%= root_path %>">Granulr</a>
       <% end %>
-      <img style="float: left;" height="100"src="http://cl.ly/image/2J0P191K361q/logo.png">
-      <h5 style="position:relative;top:37px">Step into your goals.</h5>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <% if user_signed_in? %>
       <ul class="nav navbar-nav navbar-right">
-<!--         <li class="signed-in">Hello, <strong><%= current_user.email %></strong></li> -->
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
-            <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-          <% else %>
-            <li><%= link_to "Sign up", new_user_registration_path %></li>
-            <li><%= link_to "Login", new_user_session_path %></li>
-          <% end %>
-          </ul>
-        </li>
+        <% unless user_signed_in? %>
+          <li><%= link_to "Sign up", new_user_registration_path %></li>
+          <li><%= link_to "Login", new_user_session_path %></li>
+        <% else %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+            </ul>
+          </li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </nav>
@@ -50,8 +47,7 @@
     <div class="row">
       <div class="col-md-12">
 
-          <!-- Devise Gem Authentication Alerts below -->
-
+        <!-- Devise Gem Authentication Alerts below -->
         <% flash.each do |name, msg| %>
           <%= content_tag :div, msg, :id => "flash_#{name}" %>
         <% end %>
@@ -64,20 +60,6 @@
       </div>
     </div>
   </div>
-
-<script type="text/javascript">
-  WebFontConfig = {
-    google: { families: [ 'Nothing+You+Could+Do::latin' ] }
-  };
-  (function() {
-    var wf = document.createElement('script');
-    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-    wf.type = 'text/javascript';
-    wf.async = 'true';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(wf, s);
-  })(); </script>
 
 </body>
 </html>
