--- a/user_story_app/app/assets/stylesheets/scaffolds.css.scss
+++ b/user_story_app/app/assets/stylesheets/scaffolds.css.scss
@@ -9,30 +9,17 @@ div {
 }
 
 .field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
+  @extend .has-error;
 }
 
 #error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
+  @extend .alert;
+  @extend .alert-danger;
   h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0px;
-    background-color: #c00;
-    color: #fff;
+    padding: 0 15px;
+    font-size: 18px;
   }
-  ul li {
-    font-size: 12px;
-    list-style: square;
+  ul {
+    margin-bottom: 15px;
   }
 }
