--- a/user_story_app/app/views/devise/unlocks/new.html.erb
+++ b/user_story_app/app/views/devise/unlocks/new.html.erb
@@ -1,12 +1,17 @@
-<h2>Resend unlock instructions</h2>
+<div class="col-xs-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+  <h2>Resend unlock instructions</h2>
 
-<%= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => {:method => :post, :class => "well", :role => "form"}) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+    <div class="form-group">
+      <%= f.label :email %>
+      <%= f.text_field :email, :autofocus => true, :class => "form-control", :placeholder => "Enter your email" %>
+    </div>
 
-  <div><%= f.submit "Resend unlock instructions" %></div>
-<% end %>
+    <%= f.submit "Resend unlock instructions", :class => "btn btn-default" %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+
+</div>
