--- a/user_story_app/app/views/devise/passwords/edit.html.erb
+++ b/user_story_app/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,22 @@
-<h2>Change your password</h2>
+<div class="col-xs-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+  <h2>Change your password</h2>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => {:class => "well", :role => "form"}) do |f| %>
+    <%= devise_error_messages! %>
+    <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, "New password" %><br />
-  <%= f.password_field :password, :autofocus => true %></div>
+    <div class="form-group">
+      <%= f.label :password, "New Password" %>
+      <%= f.password_field :password, :class => "form-control", :placeholder => "Enter your desired password" %>
+    </div>
 
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-  <%= f.password_field :password_confirmation %></div>
+    <div class="form-group">
+      <%= f.label :password_confirmation, "New Password Confirmation" %>
+      <%= f.password_field :password_confirmation, :class => "form-control", :placeholder => "Enter your desired password" %>
+    </div>
 
-  <div><%= f.submit "Change my password" %></div>
-<% end %>
+    <%= f.submit "Change my password", :class => "btn btn-default" %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
