updated style on add new goal form. added cancel button with event to hide form as well

--- a/user_story_app/app/assets/stylesheets/users.css.scss
+++ b/user_story_app/app/assets/stylesheets/users.css.scss
@@ -3,6 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #breadcrumbs {
   margin: 10px 0;
+  span:hover {
+    cursor: pointer;
+  }
 }
 .tile {
   border: 2px solid grey;
