--- a/user_story_app/app/assets/stylesheets/scaffolds.css.scss
+++ b/user_story_app/app/assets/stylesheets/scaffolds.css.scss
@@ -8,8 +8,25 @@ div {
   color: green;
 }
 
+.flash-alert, .flash-notice {
+  p:before {
+    font-weight: 800;
+  }
+}
+
 .field_with_errors {
   @extend .has-error;
+}
+
+.flash-alert {
+  @extend .alert-danger;
+  p:before {
+    content: 'Errors: ';
+  }
+}
+
+.flash-notice {
+  @extend .alert-info;
 }
 
 #error_explanation {
