--- a/user_story_app/app/views/layouts/application.html.erb
+++ b/user_story_app/app/views/layouts/application.html.erb
@@ -49,11 +49,7 @@
 
         <!-- Devise Gem Authentication Alerts below -->
         <% flash.each do |name, msg| %>
-          <div id="flash_#{name}" class="alert alert-danger">
-            <p style="padding: 15px;">
-              <%= msg %>
-            </p>
-          </div>
+          <%= content_tag(:div, content_tag(:p, msg, style: "padding: 15px;"), class: "alert flash-#{name}") %>
         <% end %>
 
         <% if show_title? %>
