--- a/user_story_app/app/views/users/show.html.erb
+++ b/user_story_app/app/views/users/show.html.erb
@@ -1,21 +1,27 @@
 <div id="current-user" data-user="<%= @user.to_json %>">
 
   <h3><%= @user.name %>'s Goals</h3>
-  <form id="user_story_form" style="display:none;">
-    <div>
-      <label>As a:</label>
-      <input id="as_a" type="text" name="as_a" required>
-    </div>
-    <div>
-      <label>I want to:</label>
-      <input id="i_want_to" type="text" name="i_want_to" required>
-    </div>
-    <div>
-      <label>So I can:</label>
-      <input id="so_i_can" type="text" name="so_i_can" required>
-    </div>
-    <div>
-      <input id="submit" type="submit" class="btn btn-default btn-small">
+
+
+  <form id="user_story_form" style="display:none;" role="form">
+    <div class="panel panel-default">
+      <div class="panel-heading"><h5>Add a New Goal</h5></div>
+      <div class="panel-body">
+        <div class="form-group">
+          <label for="as_a">As a:</label>
+          <input id="as_a" type="text" name="as_a" class="form-control" placeholder="Ex. Student" required>
+        </div>
+        <div class="form-group">
+          <label for="i_want_to">I want to:</label>
+          <input id="i_want_to" type="text" name="i_want_to" class="form-control" placeholder="Ex. Do well in school" required>
+        </div>
+        <div class="form-group">
+          <label for="so_i_can">So I can:</label>
+          <input id="so_i_can" type="text" name="so_i_can" class="form-control" placeholder="Ex. Go to a good college" required>
+        </div>
+        <input id="submit" type="submit" class="btn btn-default btn-sm" value="Add">
+        <button id="cancel-goal" class="btn btn-link btn-sm">Cancel</button>
+      </div>
     </div>
   </form>
 
