--- a/user_story_app/app/views/layouts/application.html.erb
+++ b/user_story_app/app/views/layouts/application.html.erb
@@ -49,7 +49,10 @@
 
         <!-- Devise Gem Authentication Alerts below -->
         <% flash.each do |name, msg| %>
-          <%= content_tag(:div, content_tag(:p, msg, style: "padding: 15px;"), class: "alert flash-#{name}") %>
+          <%= content_tag :div, :class => "alert flash-#{name}"  do %>
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true" style="margin: 13px 15px 0 0;">&times;</button>
+            <%= content_tag :p, msg, :style => "margin: 0; padding: 15px;" %>
+          <% end %>
         <% end %>
 
         <% if show_title? %>
