--- a/user_story_app/app/views/users/show.html.erb
+++ b/user_story_app/app/views/users/show.html.erb
@@ -59,4 +59,4 @@
 <h3 id="subtitle"></h3>
 <div id="breadcrumbs"><span id="dashboard-link">Dashboard</span><i> / </i><span id="add-story">Add</span></div>
 
-<div id="tiles-container"></div>
+<div id="tiles-container" class="row"></div>
